# gkiu

./: .#Makefile.am  .anjuta_sym_db.db  AUTHORS  ChangeLog  Makefile.am  README  README.asciidoc  README.html  aclocal.m4  autogen.sh  cleanup  config.h  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
po/: zh_CN.gmo  zh_CN.po
src/: Makefile.am  chatlog.c  chatlog.h  config.c  config.h  debug.c  debug.h  gkiu  i18n.h  keyring.c  keyring.h  log.c  log.h  main.c  uilogin.c  uilogin.glade  uilogin.h
